welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
	avance 
	var x=suce
	x = getCouleurSol()
	if (getCouleurSol()=Color.green){
	return true
	}else{
		return false 
	}
    recule
}        
